# repo

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt  test
.gitea/workflows/: backend-ci.yml  extension-ci.yml
REPO/: asgi.py  settings.py  urls.py  views.py  wsgi.py
config/: settings.py
docker/: docker-compose.yml  images.json
docs/: dev-setup.md
extension/: api.js  background.js  content.js  labels.html  labels.js  manifest.json  popup.html  popup.js  storage-util.js  storage.js  templates.css  templates.html  templates.js
extension/css/: extension.css  labels.css  templates.css
extension/public/: popup.html
extension/src/: popup.js
facebook-ai-connector-crm-base/: .gitignore  CONTRIBUTING.md  SECURITY.md  requirements.txt
facebook-ai-connector-crm-base/backend/: alembic.ini  pyproject.toml
facebook-ai-connector-crm-base/backend/alembic/: env.py
facebook-ai-connector-crm-base/backend/app/: main.py
facebook-ai-connector-crm-base/extension/: manifest.json
facebook-ai-connector-crm-base/infra/: Dockerfile
infra/: Dockerfile
scripts/: app.log.1  db_test.py  load_seed_data.py  log_test.py  rollover.py  seed_crm_models.py
src/auth_app/: auth_service.py  models.py  serializers.py  urls.py  views.py
src/backend/: README.md
src/config/: asgi.py  db_config.py  settings.py  urls.py  views.py  wsgi.py
src/crm/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
src/extension/: popup.js
src/integrations/: base_client.py  email_client.py  (+3 more)
(+28 files in other folders)
