[project]
name = "facrm-backend"
version = "0.1.0"
description = "Facebook AI Connector Messenger CRM - Backend (Base Project Scaffold scaffold)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "SQLAlchemy>=2.0.30",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.1",
  "python-dotenv>=1.0.1",
  "starlette>=0.37.2",
]
[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0", "ruff>=0.5.0"]
[tool.ruff]
line-length = 100
